Made numerous minor updates as per PHPCS and PHPMD

--- a/view/adminhtml/templates/media/gallery.phtml
+++ b/view/adminhtml/templates/media/gallery.phtml
@@ -134,6 +134,7 @@ $formName    = $block->getFormName();
                             <textarea data-role="image-description"
                                       rows="3"
                                       class="admin__control-textarea"
+                                      title="Image Description"
                                       name="<?php echo $elementName ?>[<%- data.file_id %>][label]"><%- data.label %></textarea>
                     </div>
                 </div>
