--- a/view/adminhtml/templates/media/gallery.phtml
+++ b/view/adminhtml/templates/media/gallery.phtml
@@ -24,9 +24,7 @@ $formName    = $block->getFormName();
      data-mage-init='{"productGallery":{"template":"#<?php echo $block->getHtmlId() ?>-template"}}'
      data-parent-component="<?php echo $block->escapeHtml($block->getParentComponent()) ?>"
      data-images="<?php echo $block->escapeHtml($block->getImagesJson()) ?>"
-     data-types="<?php echo $block->escapeHtml(
-         $this->helper(\Magento\Framework\Json\Helper\Data::class)->jsonEncode($block->getImageTypes())
-     ) ?>"
+     data-types="<?php echo $block->escapeHtml($block->getImageTypesJson()) ?>"
 >
     <?php if (!$block->getElement()->getReadonly()) : ?>
         <div class="image image-placeholder">
