--- a/view/base/web/template/form/element/time.html
+++ b/view/base/web/template/form/element/time.html
@@ -1,11 +1,17 @@
-<input class="admin__control-text" type="text" data-bind="
-    hasFocus: focused,
-    datepicker: { storage: shiftedValue, options: options },
-    valueUpdate: valueUpdate,
-    attr: {
-        value: formatValue(shiftedValue),
-        name: inputName,
-        placeholder: placeholder,
-        'aria-describedby': noticeId,
-        disabled: disabled
-    }" />
+<input class="admin__control-text" type="text"
+       data-bind="
+        event: {change: userChanges},
+        value: value,
+        hasFocus: focused,
+        valueUpdate: valueUpdate,
+        attr: {
+            name: inputName,
+            placeholder: placeholder,
+            'aria-describedby': noticeId,
+            id: uid,
+            disabled: disabled,
+            maxlength: 255
+        },
+        afterRender: initTimepicker
+    "/>
+<button type="button" class="ui-datepicker-trigger v-middle" data-bind="click: openTimepicker"><span data-bind="i18n: 'Select Time'"></span></button>
